Warning center overflow fixed, camera phone page fixed, notification added not yet tested

--- a/src/pages/Notification_page/notification_page.css
+++ b/src/pages/Notification_page/notification_page.css
@@ -10,6 +10,11 @@
   color: white !important;
 }
 
+.warning_container {
+  height: 75%;
+  overflow: scroll;
+}
+
 .noti_btn {
   width: 240px;
   height: 50px;
@@ -42,7 +47,7 @@
 }
 
 .noti_block_wc {
-  height: 100px;
+  height: auto;
   width: 320px;
   margin-inline: auto;
   margin-top: 30px;
@@ -211,7 +216,7 @@
   }
 
   .noti_block_wc {
-    height: 150px;
+    height: auto;
     width: 480px;
     left: 50%;
     margin-left: -240px;
@@ -299,7 +304,7 @@
   }
 
   .noti_block_wc {
-    height: 180px;
+    height: auto;
     width: 700px;
     left: 50%;
     margin-top: 5vh;
